<resources>
    <string name="app_name">SeatMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcom to SeatMe!</string>
    <string name="username">username</string>
    <string name="pass_word">password</string>
    <string name="find_seat">Find Seat</string>
    <string name="share_seat">Share Seat</string>

    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_select_service">Select</string>
    <string name="title_activity_push_information">Push Information</string>

    <!-- Strings related to signup -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_success">Sign Up Success</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>

    <string name="action_sign_up">Register</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_guest">Guest</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_submit">submit</string>
    <string name="prompt_room">Room</string>
    <string name="prompt_fullness">Fullness</string>
    <string name="prompt_seatnumber">Number of seat</string>
    <string name="prompt_description">Description</string>
    <string name="default_percentage">0/100</string>
    <string name="action_picture">take a picture</string>
    <string name="time">Time</string>
    <string name="update_at">Updated At</string>
    <string name="notification_forgetpassword_success">An email has sent, please check </string>
    <string name="title_activity_search_maps">Map</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="clear_text">Clear</string>

    <string name="google_maps_key">AIzaSyBtPNHoG9hZuCrQyhCdp9tdWS8J8jKEL-4</string>


    <string-array name="default_room">
        <item>room1</item>
        <item>room2</item>
    </string-array>
    <string name="title_activity_profile">Profile</string>
    <string name="your_info">User Name: </string>
    <string name="title_activity_reward">Reward</string>

    <string name="points">You current points:</string>
    <string name="redeem">Redeem your points</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="forget_password">Forget Password</string>

    <string name="change_username">rename</string>
    <string name="current_credit">current credit: </string>
    <string name="change_email">change</string>
    <string name="user_email">Email:</string>
    <string name="save_change">Save Change</string>
    <string name="add_photo">Change Photo</string>
    <string name="starbuck_fee">200 credits</string>
    <string name="movie_fee">1000 credits</string>
    <string name="clear_choice">clear</string>
    <string name="submit_choice">submit</string>

    <string name="detail_history">Show History</string>
    <string name="history">Recent record:</string>
    <string name="logout">log out</string>

    <string name="NOTIFICATION_LOGINFAILED">Login Failed</string>
    <string name="NOTIFICATION_REQUIRELOGIN">Please Login in</string>
    <string name="Occupied">Occupied</string>
    <string name="Vacant">Vacant</string>
    <string name="search_room_info">Study rooms in this building:</string>
    <string name="back_home">Home</string>
    <string name="show_username">User Name: </string>

    <string name="Notification_fill_in_form">Please fill in the form!</string>
    <string name="reward_requirelogin">Please login or signup to get reward!</string>
    <string name="not_enough_credit">Not enough credit</string>

    <string name="you_current_credit">You current credits:</string>
    <string name="redeem_succeed">Redeem succeed! Thank you for help the community!</string>
    <string name="thankyou">Share more info to get rewards! Thank you for help the community!</string>



    <string name="profile_requirelogin">Please login or signup to view!</string>



</resources>
