<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="20dp"
        android:text="Study rooms in this building:"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:minEms="7"
        android:text="@string/prompt_room"
        />
    <TextView
        android:id="@+id/room_fullness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:text="@string/prompt_fullness"
        />

    <TextView
        android:id="@+id/room_seat_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:text="@string/prompt_seatnumber"
        />

    <TextView
        android:id="@+id/room_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:text="@string/time"
        />
    </LinearLayout>

    <ListView
        android:id="@+id/room_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        />
</LinearLayout>