<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.seatme.gwu.seatme.activity.PushInformationActivity">


    <EditText android:id="@+id/push_information_form_fullness" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_fullness"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText android:id="@+id/push_information_form_seatnumber" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/prompt_seatnumber"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <Button android:id="@+id/push_information_form_submit_button" style="?android:textAppearanceSmall"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="16dp" android:text="@string/action_submit"
        android:textStyle="bold" />


</LinearLayout>
