<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.seatme.gwu.seatme.activity.RoomDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_room"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/detail_roomname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/prompt_seatnumber"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

        <TextView android:id="@+id/detail_seatnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/chart"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prompt_description"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                />

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/detailed_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/history_button"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/detail_history"/>

</LinearLayout>
